--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,10 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a class="nav-link" href="../about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="list-inline-item">
-              <a class="nav-link" href="../contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
             <li class="list-inline-item">
               <a href="https://twitter.com/koushikaravalli">
