--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,13 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<h1 class="masthead">
+  <div class="site-heading">
+    {{ page.title }}
+  </div>
+</h1>
 
 <div class="post">
+  <p class="meta">{{ page.date | date_to_string }}</p>
   {{ content }}
 </div>
