header center align

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,8 @@
 ---
 layout: default
 ---
-<h1 class="masthead">
-  <div class="site-heading">
+<h1 style="text-align:center">
     {{ page.title }}
-  </div>
 </h1>
 
 <div class="post">
