--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,6 @@ layout: default
 </h1>
 
 <div class="post">
-  <p class="meta">{{ page.date | date_to_string }}</p>
   {{ content }}
+  <p class="meta" style="text-align:right;">{{ page.date | date_to_string }}</p>
 </div>
