--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,31 +53,21 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a class="nav-link" href="/about.html">About Me</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/koushikaravalli">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/koushik-aravalli">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; 2020</p>
+      <div class="row justify-content-center">
+        <div class="footer-col footer-col-2">
+          
+          <a href="https://github.com/koushik-aravalli">
+            <svg class="svg-icon">
+              <use xlink:href="/assets/minima-social-icons.svg#github" fill='#868e96'/>
+            </svg>
+          </a>
+          <a href="https://www.twitter.com/koushikaravalli">
+            <svg class="svg-icon">
+              <use xlink:href="/assets/minima-social-icons.svg#twitter" fill='#00ACEE'/>
+            </svg>
+          </a>
         </div>
+        <div class="copyright text-muted">Copyright &copy; 2020</div>
       </div>
     </div>
   </footer>
