--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
  */
 
-body {
+ body {
   font-size: 20px;
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
@@ -385,7 +385,7 @@ footer .list-inline {
 footer .copyright {
   font-size: 14px;
   margin-bottom: 0;
-  text-align: center;
+  text-align: left;
 }
 
 .btn {
@@ -413,3 +413,7 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+
+.svg-icon { width: 30px; height: 30px; display: inline-block; fill: #00ACEE; padding-right: 5px; vertical-align: text-top; }
+
+.social-media-list li + li { padding-top: 5px; }
