include footer icon for rss

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title> {{ page.title }}</title>
+  <title> {{ page.title }} </title>
 
   <!-- Bootstrap core CSS -->
   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -64,6 +64,11 @@
           <a href="https://www.twitter.com/koushikaravalli">
             <svg class="svg-icon">
               <use xlink:href="/assets/minima-social-icons.svg#twitter" fill='#00ACEE'/>
+            </svg>
+          </a>
+          <a href="https://koushik-aravalli.github.io/feed.links.xml">
+            <svg class="svg-icon">
+              <use xlink:href="/assets/minima-social-icons.svg#rss" fill='#00ACEE'/>
             </svg>
           </a>
         </div>
