Add color code for RSS icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
           </a>
           <a href="https://koushik-aravalli.github.io/feed.links.xml">
             <svg class="svg-icon">
-              <use xlink:href="/assets/minima-social-icons.svg#rss" fill='#00ACEE'/>
+              <use xlink:href="/assets/minima-social-icons.svg#rss" fill='#ee802f'/>
             </svg>
           </a>
         </div>
