--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,3 +9,10 @@ layout: default
   {{ content }} 
   <p class="meta" style="text-align:right;">{{ page.date | date_to_string }}</p>
 </div>
+
+<span>[
+  {% for tag in page.tags %}
+    {% capture tag_name %}{{ tag }}{% endcapture %}
+    <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+  {% endfor %}
+]</span>
