--- a/src/components/global.css
+++ b/src/components/global.css
@@ -106,3 +106,25 @@ button {
     top: 0;
   }
 }
+
+.tag {
+  margin: 0 2px;
+  padding: 4px 10px;
+  color: #fff;
+  background: #999;
+  font-size: 80%;
+  font-family: sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.table {
+  table-layout: auto;
+  border-collapse: collapse;
+  width: auto;
+}
+.table td {
+  border: 1px;
+  color: gray;
+  font-style: italic;
+}
